--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@nivo/pie": "^0.85.1",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
+    "@shadcn/ui": "^0.0.4",
     "@sirclo/nexus": "^2.19.34",
     "@tabler/icons-react": "^3.5.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -36,6 +37,7 @@
     "chart.js": "^4.4.3",
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.5",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.11.1",
     "framer-motion": "^11.2.6",
     "https-browserify": "^1.0.0",
